--- a/5 семестр (Квантовая физика)/2.2+2.3/2.2.tex
+++ b/5 семестр (Квантовая физика)/2.2+2.3/2.2.tex
@@ -402,12 +402,16 @@ $D_2$:
     \end{gathered}
 \end{equation*}
 
-Значение $D_1$ хорошо соотносится с табличным:
+Значение $D_1$ хорошо соотносится с табличным в отличие от $D_2$:
 \begin{equation*}
-        D_1 ^{\text{т}}  = 1,57\: \text{эВ}\\
+    \begin{gathered}
+        D_1 ^{\text{т}}  = 1,5425\: \text{эВ}\\
+        D_2 ^{\text{т}}  = 0,69\: \text{эВ}\\
+    \end{gathered}
 \end{equation*}
-Неточность полученных результатов связана с визуальным определением
-линий спектра йода.
+Неточность полученных результатов связана со сложностью визуального
+определения
+линий спектра поглощения йода.
 
 
 
