--- a/5 семестр (Квантовая физика)/4.1/4.1.tex
+++ b/5 семестр (Квантовая физика)/4.1/4.1.tex
@@ -299,7 +299,7 @@ $350\: \text{c} ^{-1}$.
 
 Определим энергию $\alpha$-частиц по формуле \eqref{eq:1}:
 \[
-    E = (4,61 \pm 0,09)\: \text{МэВ}
+    E^* = (4,61 \pm 0,09)\: \text{МэВ}
 \]
 
 
@@ -324,6 +324,85 @@ $350\: \text{c} ^{-1}$.
     \text{мг}/\text{см}^2
     \end{gathered}
 \end{equation*}
+
+Значения в пределах погрешностей совпадают друг с другом. По длинам
+свободного пробега была определена энергия $\alpha$-частиц:
+\begin{equation*}
+    \begin{gathered}
+    E = (4,5 \pm 0,2)\: \text{МэВ}\\
+    E^* = (4,61 \pm 0,09)\: \text{МэВ}
+    \end{gathered}
+\end{equation*}
+
+Результат, полученный с помощью ионизационной камеры получился
+точнее, однако он также отличаются от табличного значения:
+\[
+    E^\text{т} = 5,15\: \text{МэВ}
+\]
+
+Расхождения могут быть связаны с использованием эмпирической формулы
+для подсчета энергии \eqref{eq:1}, а также с неточностью измерений.
+При измерении с помощью сцинтилляционного счетчика неточность связана
+с угловой расходимостью пучка $\alpha$-частиц, при измерении с помощью
+ионизационной камеры неточность возникает в измерении малых токов.
+
+По измеренным значениям среднего пробега и экстраполированного пробега
+(с помощью сцинтилляционного счетчика)
+была вычислена толщина слюды, закрывающей окно торцевого счетчика.
+\[
+    \Delta h = (1,7 \pm 0,4)\: \text{г}/\text{см}^2
+\]
+
+По периоду полураспада плутония $ ^{239} \text{Pu}$ была проведена
+оценка количества вещества в препарате:
+\[
+        \nu \approx 1,4 \cdot 10 ^{-7}\: \text{моль}
+\]
+
+
+\section*{А. Приложение}
+Данные для построения графика на \fig{fig:6}:
+
+\renewcommand{\arraystretch}{1.4}
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|c|cc}
+\hline
+$P,\: \text{кПа}$    & $N,\: \text{с}^{-1}$     & $P,\: \text{кПа}$     & $N,\: \text{с}^{-1}$     & \multicolumn{1}{c|}{$P,\: \text{кПа}$}     & \multicolumn{1}{c|}{$N,\: \text{с}^{-1}$}    \\ \hline
+0,00  & 364,5 & 19,72 & 215,4 & \multicolumn{1}{c|}{34,68} & \multicolumn{1}{c|}{22,2} \\ \hline
+3,40  & 345,1 & 22,44 & 181,2 & \multicolumn{1}{c|}{36,04} & \multicolumn{1}{c|}{8,0}  \\ \hline
+6,12  & 336,8 & 25,16 & 138,4 & \multicolumn{1}{c|}{37,40} & \multicolumn{1}{c|}{3,6}  \\ \hline
+8,84  & 325,2 & 27,88 & 99,7  & \multicolumn{1}{c|}{38,76} & \multicolumn{1}{c|}{1,1}  \\ \hline
+11,56 & 295,6 & 30,60 & 63,0  & \multicolumn{1}{c|}{44,20} & \multicolumn{1}{c|}{0,1}  \\ \hline
+14,28 & 284,8 & 31,96 & 49,2  & \multicolumn{1}{c|}{57,80} & \multicolumn{1}{c|}{0,2}  \\ \hline
+17,00 & 238,1 & 33,32 & 35,2  &                            &                           \\ \cline{1-4}
+\end{tabular}
+\caption{Зависимость количества сигналов с фотоумножителя в секунду
+$N$ от давления $P$}
+\end{table}
+
+Данные для построения графика на \fig{fig:7}:
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|}
+\hline
+$P,\: \text{кПа}$     &  $I,\: \text{пА}$  & $P,\: \text{кПа}$     &
+$I,\: \text{пА}$   & $P,\: \text{кПа}$     & $I,\: \text{пА}$   \\ \hline
+0,00  & 8   & 65,96 & 835 & 79,56 & 951 \\ \hline
+3,40  & 42  & 67,32 & 851 & 80,92 & 947 \\ \hline
+17,00 & 188 & 68,68 & 875 & 82,28 & 946 \\ \hline
+30,60 & 348 & 70,04 & 895 & 83,64 & 947 \\ \hline
+44,20 & 522 & 71,40 & 908 & 85,00 & 935 \\ \hline
+57,80 & 711 & 71,40 & 911 & 87,72 & 935 \\ \hline
+59,16 & 733 & 72,76 & 928 & 90,44 & 932 \\ \hline
+60,52 & 754 & 74,12 & 931 & 93,16 & 929 \\ \hline
+61,88 & 772 & 75,48 & 941 & 95,88 & 924 \\ \hline
+63,24 & 793 & 76,84 & 943 & 98,60 & 918 \\ \hline
+64,60 & 816 & 78,20 & 946 & 99,28 & 913 \\ \hline
+\end{tabular}
+\caption{Зависимость тока через камеру $I$ до давления $P$}
+\end{table}
 
 
 
